simple-app-demo/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-hello-pod
  labels:
    app: nginx-hello
spec:
  containers:
    - name: nginx
      image: sibindocker/images:nginxdemo
      ports:
        - containerPort: 80
